# filament

./: CMakeLists.txt
android/: build.gradle
android/samples/sample-page-curl/: CMakeLists.txt  build.gradle
android/samples/sample-page-curl/src/main/java/com/google/android/filament/pagecurl/: KtxLoader.java  MainActivity.java  MainActivity.kt  Page.java  PageBuilder.java  PageMaterials.java
android/samples/sample-page-curl/src/main/materials/: lit.mat
filament/backend/src/metal/: MetalDriver.mm
filament/src/: Camera.cpp  Scene.cpp  ShadowMap.cpp  ShadowMapManager.cpp  View.cpp
filament/src/details/: Camera.h  Scene.h  View.h
java/filament/: CMakeLists.txt
libs/filabridge/include/private/filament/: UibGenerator.h
libs/filabridge/src/: UibGenerator.cpp
libs/filamat/src/shaders/: ShaderGenerator.cpp
libs/gltfio/include/gltfio/: SimpleViewer.h
libs/pagecurl/: CMakeLists.txt
libs/pagecurl/include/pagecurl/: Page.h  PageBuilder.h  PageMaterials.h
libs/pagecurl/materials/: pagecurl.mat
libs/pagecurl/src/: PageBuilder.cpp  PageMaterials.cpp
samples/: gltf_viewer.cpp
shaders/src/: light_punctual.fs  shading_unlit.fs
web/filament-js/: jsbindings.cpp
